--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
   <body>
     <h1 style="color: green; font-size: 40px">Тут мы тестим попап в теге</>
       
+      <script>
+        (function (window, document, dataLayerName, containerID) {
+            window[dataLayerName] = window[dataLayerName] || [];
+            window[dataLayerName].push({ 'start': new Date().getTime(), event: 'actm-js' });
+            var firstScript = document.getElementsByTagName('script')[0];
+            var script = document.createElement('script');
+            var dl = dataLayerName !== 'acDataLayer' ? '&l=' + dataLayerName : '';
+            script.async = true;
+            script.src = 'https://pxl.vadim-fayrushin.dev.altkraft.com/actm/js/actm.js?id=' + containerID + dl;
+            script.type = 'module';
+            if (firstScript && firstScript.parentNode) {
+                firstScript.parentNode.insertBefore(script, firstScript);
+            }
+        }(window, document, 'acDataLayer', 'ATM-fCfbNXxhb_dfuMNX'));
+    </script>
   </body>
 </html>
