--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <h1 style="color: green; font-size: 40px">Тут мы тестим попап в теге</>
-      
+      <script>
+        setTimeout(() => {
+          console.log('two hours later');
+        }, 30000);
+      </script>
       <script>
         (function (window, document, dataLayerName, containerID) {
             window[dataLayerName] = window[dataLayerName] || [];
