--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Altcraft Popup Test</title>
   </head>
   <body>
-    <h1 style="color: green; font-size: 40px">Тут мы тестим попап в теге</>
+    <h1 style="color: green; font-size: 40px">Тут мы тестим попап в теге</h1>
       <script>
         setTimeout(() => {
           console.log('two hours later');
