--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-   <script>
-        (function (window, document, dataLayerName, containerID) {
-            window[dataLayerName] = window[dataLayerName] || [];
-            window[dataLayerName].push({ 'start': new Date().getTime(), event: 'actm-js' });
-            var firstScript = document.getElementsByTagName('script')[0];
-            var script = document.createElement('script');
-            var dl = dataLayerName !== 'acDataLayer' ? '&l=' + dataLayerName : '';
-            script.async = true;
-            script.src = 'https://pxl.vadim-fayrushin.dev.altkraft.com/actm/js/actm.js?id=' + containerID + dl;
-            script.type = 'module';
-            if (firstScript && firstScript.parentNode) {
-                firstScript.parentNode.insertBefore(script, firstScript);
-            }
-        }(window, document, 'acDataLayer', 'ATM-fCfbNXxhb_dfuMNX'));
-    </script>
+     <script>
+      (function (window, document, dataLayerName, containerID) {
+          window[dataLayerName] = window[dataLayerName] || [];
+          window[dataLayerName].push({ 'start': new Date().getTime(), event: 'actm-js' });
+          var firstScript = document.getElementsByTagName('script')[0];
+          var script = document.createElement('script');
+          var dl = dataLayerName !== 'acDataLayer' ? '&l=' + dataLayerName : '';
+          script.async = true;
+          script.src = 'https://pxl.vadim-fayrushin.dev.altkraft.com/actm/js/actm.js?id=' + containerID + dl;
+          script.type = 'module';
+          if (firstScript && firstScript.parentNode) {
+              firstScript.parentNode.insertBefore(script, firstScript);
+          }
+      }(window, document, 'acDataLayer', 'ATM-jbdLLBo15uSReqHD'));
+    </script>  
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -28,6 +28,25 @@
       setTimeout(() => {
         console.log('two hours later');
       }, 30000);
+    </script>
+
+    <script>
+     (function (popupFunc) {
+            var script = document.createElement('script');
+            var firstScript = document.getElementsByTagName('script')[0];
+            var popupFuncName = popupFunc !== 'acpopup' ? '?f=' + popupFunc : '';
+            window[popupFunc] = window[popupFunc] || function () {
+                (window[popupFunc].actions = window[popupFunc].actions || []).push(arguments);
+            };
+            window[popupFunc].last_init = 1 * new Date()
+            script.async = true;
+            script.src = 'https://pxl.vadim-fayrushin.dev.altkraft.com' + '/popup/v1/js/popupLibrary.js' + popupFuncName;
+            firstScript.parentNode.insertBefore(script, firstScript);
+     })('acpopup');
+    </script>
+    <script>    
+      acpopup('create', 'AP-6YjesG7BVAoWYTE_R');
+      acpopup('show', 'AP-6YjesG7BVAoWYTE_R');
     </script>
   </body>
 </html>
