--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-     <script>
-      (function (window, document, dataLayerName, containerID) {
-          window[dataLayerName] = window[dataLayerName] || [];
-          window[dataLayerName].push({ 'start': new Date().getTime(), event: 'actm-js' });
-          var firstScript = document.getElementsByTagName('script')[0];
-          var script = document.createElement('script');
-          var dl = dataLayerName !== 'acDataLayer' ? '&l=' + dataLayerName : '';
-          script.async = true;
-          script.src = 'https://pxl.vadim-fayrushin.dev.altkraft.com/actm/js/actm.js?id=' + containerID + dl;
-          script.type = 'module';
-          if (firstScript && firstScript.parentNode) {
-              firstScript.parentNode.insertBefore(script, firstScript);
-          }
-      }(window, document, 'acDataLayer', 'ATM-jbdLLBo15uSReqHD'));
-    </script>  
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -30,7 +15,15 @@
       }, 30000);
     </script>
 
-    <script>
+<script>
+  const ifdd = document.createElement('iframe');
+const src = '<script>(function (window, document, dataLayerName, containerID) {window[dataLayerName] = window[dataLayerName] || [];window[dataLayerName].push({ \'start\': new Date().getTime(), event: \'actm-js\' });var firstScript = document.getElementsByTagName(\'script\')[0];var script = document.createElement(\'script\');var dl = dataLayerName !== \'acDataLayer\' ? \'&l=\' + dataLayerName : \'\';script.async = true;script.src = \'https://pxl.vadim-fayrushin.dev.altkraft.com/actm/js/actm.js?id=\' + containerID + dl;script.type = \'module\';if (firstScript && firstScript.parentNode) {    firstScript.parentNode.insertBefore(script, firstScript);}}(window, document, \'acDataLayer\', \'ATM-jbdLLBo15uSReqHD\')</script>'
+ifdd.setAttribute('srcdoc', src);
+
+document.body.appendChild(ifdd);
+</script>
+
+<!--     <script>
      (function (popupFunc) {
             var script = document.createElement('script');
             var firstScript = document.getElementsByTagName('script')[0];
@@ -47,6 +40,6 @@
     <script>    
       acpopup('create', 'AP-6YjesG7BVAoWYTE_R');
       acpopup('show', 'AP-6YjesG7BVAoWYTE_R');
-    </script>
+    </script> -->
   </body>
 </html>
