--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </script>
 
 <script>
-  const ifdd = document.createElement('iframe');
-const src = '<script>(function (window, document, dataLayerName, containerID) {window[dataLayerName] = window[dataLayerName] || [];window[dataLayerName].push({ \'start\': new Date().getTime(), event: \'actm-js\' });var firstScript = document.getElementsByTagName(\'script\')[0];var script = document.createElement(\'script\');var dl = dataLayerName !== \'acDataLayer\' ? \'&l=\' + dataLayerName : \'\';script.async = true;script.src = \'https://pxl.vadim-fayrushin.dev.altkraft.com/actm/js/actm.js?id=\' + containerID + dl;script.type = \'module\';if (firstScript && firstScript.parentNode) {    firstScript.parentNode.insertBefore(script, firstScript);}}(window, document, \'acDataLayer\', \'ATM-jbdLLBo15uSReqHD\')</script>'
+const ifdd = document.createElement('iframe');
+const src = "<script>(function (window, document, dataLayerName, containerID) {window[dataLayerName] = window[dataLayerName] || [];window[dataLayerName].push({ 'start': new Date().getTime(), event: 'actm-js' });var firstScript = document.getElementsByTagName('script')[0];var script = document.createElement('script');var dl = dataLayerName !== 'acDataLayer' ? '&l=' + dataLayerName : '';script.async = true;script.src = 'https://pxl.vadim-fayrushin.dev.altkraft.com/actm/js/actm.js?id=' + containerID + dl;script.type = 'module';if (firstScript && firstScript.parentNode) {    firstScript.parentNode.insertBefore(script, firstScript);}}(window, document, 'acDataLayer', 'ATM-jbdLLBo15uSReqHD')</script>"
 ifdd.setAttribute('srcdoc', src);
 
 document.body.appendChild(ifdd);
