--- a/index.html
+++ b/index.html
@@ -16,11 +16,36 @@
     </script>
 
 <script>
-const ifdd = document.createElement('iframe');
-const src = "<script>(function (window, document, dataLayerName, containerID) {window[dataLayerName] = window[dataLayerName] || [];window[dataLayerName].push({ 'start': new Date().getTime(), event: 'actm-js' });var firstScript = document.getElementsByTagName('script')[0];var script = document.createElement('script');var dl = dataLayerName !== 'acDataLayer' ? '&l=' + dataLayerName : '';script.async = true;script.src = 'https://pxl.vadim-fayrushin.dev.altkraft.com/actm/js/actm.js?id=' + containerID + dl;script.type = 'module';if (firstScript && firstScript.parentNode) {    firstScript.parentNode.insertBefore(script, firstScript);}}(window, document, 'acDataLayer', 'ATM-jbdLLBo15uSReqHD')</script>"
-ifdd.setAttribute('srcdoc', src);
 
-document.body.appendChild(ifdd);
+           var data = prompt('Вставьте скрипт контейнера');
+            console.log(`Embedded element: ${data}`);
+
+            (function showFrame()
+            {   
+                // Find body
+                const body = document.querySelector('body');
+
+                // Create container
+                const container = document.createElement('div');
+                container.setAttribute('class', 'container');
+                body.appendChild(container);
+
+                // Create title
+                const title = document.createElement('p');
+                title.innerText = 'Публикация попапа';
+                container.appendChild(title);
+
+                // Create iframe
+                const iframe = document.createElement('iframe');
+                iframe.setAttribute('id', 'frame');
+                iframe.setAttribute('srcdoc', `${data}`);
+                iframe.setAttribute('frameborder', '0');
+                iframe.setAttribute('scrolling', 'auto');
+                iframe.setAttribute('style', 'height: calc(100% - 1px)');
+                container.appendChild(iframe);
+                
+            })();
+  
 </script>
 
 <!--     <script>
