--- a/index.html
+++ b/index.html
@@ -4,6 +4,69 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;1,100&display=swap');
+
+            html, body {
+                font: 14pt Arial;
+                margin: 0;
+                padding: 0;
+                color: white;
+                background: linear-gradient(270deg, #6128ca, #008170);
+                background-size: 400% 400%;
+                -webkit-animation: Root 36s ease infinite;
+                -moz-animation: Root 36s ease infinite;
+                animation: Root 36s ease infinite;
+                height: 100%;
+                display: flex;
+                flex: 1;
+            }
+            a {text-decoration: none; color: aquamarine;}
+            a:hover {text-decoration: none; color: rgb(29, 110, 83)}
+
+            #refresh {width: 150px; height: 35px; margin-top: 5%;}
+
+            iframe {
+                width: 100%;
+                height: 120%;
+                border: none;
+                -webkit-box-shadow: -1px 4px 11px 10px rgba(34, 60, 80, 0.51);
+                -moz-box-shadow: -1px 4px 11px 10px rgba(34, 60, 80, 0.51);
+                box-shadow: -1px 4px 11px 10px rgba(34, 60, 80, 0.51);
+                -webkit-border-radius: 4px;
+                -moz-border-radius: 4px;
+                border-radius: 4px;
+                margin-top: 5%;
+            }
+
+            .container {
+                max-width: 100%;
+                width: 80%;
+                margin: 0 auto;
+                text-align: center;
+                height: auto;
+                font-family: 'Roboto Mono', monospace !important;
+                font-weight: 200;
+                font-size: 35pt;
+            }
+
+            @-webkit-keyframes Root {
+                0%{background-position:0% 50%}
+                50%{background-position:100% 50%}
+                100%{background-position:0% 50%}
+            }
+            @-moz-keyframes Root {
+                0%{background-position:0% 50%}
+                50%{background-position:100% 50%}
+                100%{background-position:0% 50%}
+            }
+            @keyframes Root {
+                0%{background-position:0% 50%}
+                50%{background-position:100% 50%}
+                100%{background-position:0% 50%}
+            }
+        </style>
   
     <title>Altcraft Popup Test</title>
   </head>
